--- a/src/Xreeple.Bukalemun.Data.Postgresql/Xreeple.Bukalemun.Data.Postgresql.csproj
+++ b/src/Xreeple.Bukalemun.Data.Postgresql/Xreeple.Bukalemun.Data.Postgresql.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.66" />
+    <PackageReference Include="Npgsql" Version="9.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Xreeple.Bukalemun.AspNet\Xreeple.Bukalemun.AspNet.csproj" />
+    <ProjectReference Include="..\Xreeple.Bukalemun.Data\Xreeple.Bukalemun.Data.csproj" />
+  </ItemGroup>
+
 </Project>
