feat: add providers project and refactor repository logic

--- a/src/Xreeple.Bukalemun.AspNet/Xreeple.Bukalemun.AspNet.csproj
+++ b/src/Xreeple.Bukalemun.AspNet/Xreeple.Bukalemun.AspNet.csproj
@@ -10,4 +10,8 @@
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\Xreeple.Bukalemun.Services\Xreeple.Bukalemun.Services.csproj" />
+	</ItemGroup>
+
 </Project>
