--- a/samples/Bukalemun.Api/appsettings.json
+++ b/samples/Bukalemun.Api/appsettings.json
@@ -1,9 +1,15 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "User ID=postgres;Password=password;Host=db;Port=5432;Database=postgres;Pooling=true;Keepalive=60;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Bukalemun": {
+    "Stores": [ "Default", "Deneme" ]
+  }
 }
