feat: integrate bukalemun with encryption and openapi support

--- a/src/Xreeple.Bukalemun.AspNet/Xreeple.Bukalemun.AspNet.csproj
+++ b/src/Xreeple.Bukalemun.AspNet/Xreeple.Bukalemun.AspNet.csproj
@@ -11,6 +11,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\Xreeple.Bukalemun.Providers\Xreeple.Bukalemun.Providers.csproj" />
 	  <ProjectReference Include="..\Xreeple.Bukalemun.Services\Xreeple.Bukalemun.Services.csproj" />
 	</ItemGroup>
 
