--- a/src/Xreeple.Bukalemun.Services/Xreeple.Bukalemun.Services.csproj
+++ b/src/Xreeple.Bukalemun.Services/Xreeple.Bukalemun.Services.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Xreeple.Bukalemun.Data\Xreeple.Bukalemun.Data.csproj" />
+    <ProjectReference Include="..\Xreeple.Bukalemun.Providers\Xreeple.Bukalemun.Providers.csproj" />
+  </ItemGroup>
+
 </Project>
