--- a/samples/Bukalemun.Api/appsettings.json
+++ b/samples/Bukalemun.Api/appsettings.json
@@ -10,6 +10,10 @@
   },
   "AllowedHosts": "*",
   "Bukalemun": {
-    "Stores": [ "Default", "Deneme" ]
+    "Stores": {
+      "Default": {
+        "EncryptKey": "V8vl8wrpMAjjKqq02wsjYVctgUC5GnPVfuEGZ/d3VZA="
+      }
+    }
   }
 }
